styles/components/imageCarousel.css
.image-carousel {
    @apply flex flex-col gap-5;
}
.image-carousel-selected-image {
    @apply flex bg-no-repeat bg-center bg-contain bg-gray-100 dark:bg-gray-900 rounded-3xl w-auto h-40 md:h-96 xl:h-128 shadow-xl;
}
.image-carousel-next-image-left, .image-carousel-next-image-right {
    @apply opacity-100 md:opacity-0 size-10 md:size-12 bg-gray-200 rounded-full transition ease-in-out delay-200;
}
.image-carousel-next-image-left {
    @apply absolute self-center left-2;
}
.image-carousel-next-image-right {
    @apply absolute self-center right-2;
}
.image-carousel-controls {
    @apply flex self-center;
}
.image-carousel-queued-scroll {
    @apply hidden md:flex flex-col flex-wrap py-10 px-1 overflow-x-auto;
}
.image-carousel-queued-container {
    @apply flex flex-row flex-nowrap gap-5;
}
.image-carousel-thumbnail-image {
    @apply bg-no-repeat bg-center bg-cover bg-gray-100 dark:bg-gray-900 rounded-xl w-36 h-20 md:w-56 md:h-32 shadow-xl transition ease-in-out hover:-translate-y-2;
}
.image-carousel-thumbnail-video {
    @apply flex justify-center bg-gray-100 dark:bg-gray-900 rounded-xl w-36 h-20 md:w-56 md:h-32 shadow-xl transition ease-in-out hover:-translate-y-2;
}
.image-carousel-thumbnail-image-selected, .image-carousel-thumbnail-video-selected {
    @apply outline outline-4 outline-blue-950 dark:outline-white;
}

